# peloton

./: .dockerignore  .gitignore  30_day_stats.ipynb  Dockerfile  LICENSE  PylotonDataset.py  README.md  all_instructors.json  altair_test.ipynb  api.py  api_test.py  app.py  asdf.csv  config.py  dataframe-testing.py  df_metrics.csv  df_summary.csv  df_workouts_by_id.csv  docker-compose.yml  download_all_workout_images.py  get_all_instructors.py  get_workout_info.py  hr_charts.ipynb  line_charts_testing.ipynb  main.py  main_mariadb.py  main_sql.py  main_test.py  make_thumbnails.py  mongodb_test.py  peloton-csv.py  peloton-pivots.py  peloton-sqlite.py  peloton-to-mariadb.py  peloton.sh  peloton_instructors copy.json  peloton_instructors.json  peloton_streamlit.py  plotting_test.ipynb  processed_df.csv  (+15 more)
dash/: app.py
data/: ._peloton.db  ._peloton.db.bak.db  all_data.csv  month_table.csv  processed_workouts_data.csv  raw_metrics_data.csv  raw_workouts_data.csv  totals_table.csv  workout_metrics.txt  year_table.csv
docs/: test.xlsx  test1.py
notebooks/: hr_charts.ipynb  pivot_charts_test.ipynb  plotting_test.ipynb
peloton/: __init__.py  classes.py  constants.py  copy_tables_to_test_db.py  dataclass_test.py  exceptions.py  functions.py  google_sheets_test.py  helpers.py  initialization_functions.py  peloton_csv.py  peloton_data.py  peloton_google_sheets.py  peloton_instructors.py  peloton_pivots.py  peloton_printer.py  peloton_processor.py  peloton_ride.py  peloton_to_mariadb.py  pyloton_connector.py  pyloton_models.py  pyloton_to_txt.py  pyloton_zmv.py  raw_data_tests.py  (+3 more)
(+153 files in other folders)
