[tool.poetry]
name = "peloton"
version = "0.1.0"
description = "Peloton data API"
authors = ["Zach Vaughan <85461794+cyrii42@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.0"}
pydantic = "^2.9.0"
pandas = "^2.2.2"
plotly = "^5.24.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pymongo = "^4.8.0"
SQLAlchemy = "^2.0.34"
pillow = "^10.4.0"
Jinja2 = "^3.1.4"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
